<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/type_item"
        android:icon="@drawable/ic_grid_view"
        android:title="@string/view_type_text"
        app:showAsAction="always" />

</menu>