package com.yogadarma.awesomeapp.presentation

import androidx.recyclerview.widget.RecyclerView
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.ext.junit.rules.ActivityScenarioRule
import com.yogadarma.awesomeapp.R
import com.yogadarma.core.utils.EspressoIdlingResource
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test

/* Jika ingin menjalankan test berikut tolong uncomment terlebih dahulu kode Idling Resource
    pada class RemoteDataSource */
class MainActivityTest {

    @get:Rule
    val rule = ActivityScenarioRule(MainActivity::class.java)

    @Before
    fun setUp() {
        IdlingRegistry.getInstance().register(EspressoIdlingResource.idlingResource)
    }

    @After
    fun tearDown() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.idlingResource)
    }

    /* Jika ingin menjalankan test berikut tolong uncomment terlebih dahulu kode Idling Resource
    pada class RemoteDataSource */
    @Test
    fun loadCuratedPhoto() {
        onView(withId(R.id.rv_photo)).apply {
            check(matches(isDisplayed()))
            perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(10))
        }
    }

    /* Jika ingin menjalankan test berikut tolong uncomment terlebih dahulu kode Idling Resource
    pada class RemoteDataSource */
    @Test
    fun changeListViewToGridView() {
        onView(withId(R.id.rv_photo)).check(matches(isDisplayed()))
        onView(withId(R.id.type_item)).perform(click())
        onView(withId(R.id.rv_photo)).apply {
            check(matches(isDisplayed()))
            perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(10))
        }
    }

    /* Jika ingin menjalankan test berikut tolong uncomment terlebih dahulu kode Idling Resource
    pada class RemoteDataSource */
    @Test
    fun swipeCoverImage() {
        onView(withId(R.id.view_pager)).check(matches(isDisplayed()))
        onView(withId(R.id.view_pager)).perform(swipeLeft())
        onView(withId(R.id.view_pager)).perform(swipeLeft())
        onView(withId(R.id.view_pager)).perform(swipeLeft())
        onView(withId(R.id.view_pager)).perform(swipeLeft())
        onView(withId(R.id.view_pager)).perform(swipeLeft())
        onView(withId(R.id.view_pager)).perform(swipeRight())
    }

    /* Jika ingin menjalankan test berikut tolong uncomment terlebih dahulu kode Idling Resource
    pada class RemoteDataSource */
    @Test
    fun loadPhotoDetail() {
        onView(withId(R.id.rv_photo)).check(matches(isDisplayed()))
        onView(withId(R.id.rv_photo)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.img_photo_detail)).check(matches(isDisplayed()))
        onView(withId(R.id.img_photographer)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_photographer)).check(matches(isDisplayed()))
    }
}